@@ -36,7 +36,6 @@ public class TypeResolverTest extends TypeAssignerTestSuite {
   Type charSequenceType = new JavaClassType("CharSequence", new JavaPackageName("java.lang"));
   Type numberType = new JavaClassType("Number", new JavaPackageName("java.lang"));
   Type dateType = new JavaClassType("Date", new JavaPackageName("java.util"));
-  ;
   Type miscType = new JavaClassType("Misc", new JavaPackageName(""));
   Type sysoutType = new JavaClassType("PrintStream", new JavaPackageName("java.io"));
   Type throwableType = new JavaClassType("Throwable", new JavaPackageName("java.lang"));
@@ -111,7 +110,8 @@ public class TypeResolverTest extends TypeAssignerTestSuite {
         view.getIdentifierFactory()
             .getMethodSignature("NewArrayInstance", "entry", "void", Collections.emptyList());
     final Optional<JavaSootMethod> methodOpt = view.getMethod(methodSignature);
-    final SootMethod sootMethod = methodOpt.get();
+    final SootMethod sootMethod = methodOpt.orElse(null);
+    assertNotNull(sootMethod);
     final Body.BodyBuilder builder =
         Body.builder(sootMethod.getBody(), EnumSet.noneOf(MethodModifier.class));
 
@@ -305,8 +305,8 @@ public class TypeResolverTest extends TypeAssignerTestSuite {
   public void testTaAndLnsWithoutLS() {
     AnalysisInputLocation inputLocation =
         new JavaClassPathAnalysisInputLocation(
-            baseDir + "Misc/", SourceType.Application, Arrays.asList(new TypeAssigner()));
-    final JavaView view = new JavaView(Arrays.asList(inputLocation));
+            baseDir + "Misc/", SourceType.Application, List.of(new TypeAssigner()));
+    final JavaView view = new JavaView(List.of(inputLocation));
 
     final MethodSignature methodSignature =
         view.getIdentifierFactory()
@@ -358,7 +358,7 @@ public class TypeResolverTest extends TypeAssignerTestSuite {
             baseDir + "Misc/",
             SourceType.Application,
             Arrays.asList(new LocalSplitter(), new TypeAssigner()));
-    final JavaView view = new JavaView(Arrays.asList(inputLocation));
+    final JavaView view = new JavaView(List.of(inputLocation));
 
     final MethodSignature methodSignature =
         view.getIdentifierFactory()
@@ -384,7 +384,7 @@ public class TypeResolverTest extends TypeAssignerTestSuite {
     JavaClassPathAnalysisInputLocation inputLocation =
         new JavaClassPathAnalysisInputLocation(
             baseDir + "Misc/", SourceType.Library, Collections.singletonList(new TypeAssigner()));
-    final JavaView view = new JavaView(Arrays.asList(inputLocation));
+    final JavaView view = new JavaView(List.of(inputLocation));
 
     final MethodSignature methodSignature =
         view.getIdentifierFactory()
